Update and rename index-1.html to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>CSS Crusher - Home</title>
-  <!-- <link rel="stylesheet" href="styles.css"> -->
+   <link rel="stylesheet" href="styles2.css"> 
 </head>
 <body class="body-class">
 
